src/test/deca/context/valid/Obj/select-protected.deca
// Description:
//    Sélection d'un champ protected à l'intérieur d'une sous-classe
//
// Résultat:
//    Succès
//
class A {
    protected int a;
}
class B extends A{
    void methode(){
        this.a;
    }
}
{}