src/test/deca/context/invalid/Obj/select-field-inexistant.deca
// Description:
//    Sélection d'un champ non déclaré dans la classe;
//
// Résultat:
//Le champ n'est pas défini
//
class A{
    void methode(){}
}
{
    A a = new A();
    float x = a.champ;
}